--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +11,172 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* From Uiverse.io by Cevorob */ 
+button {
+  padding: 9px 20px;
+  border-radius: 50px;
+  cursor: pointer;
+  border: 0;
+  background-color: rgb(45, 160, 226);
+  color: aliceblue;
+  box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  font-size: 15px;
+  transition: all 0.5s ease;
+}
+
+button.disabled {
+  padding: 9px 20px;
+  border-radius: 50px;
+  cursor: pointer;
+  border: 0;
+  background-color: rgb(158, 164, 168);
+  color: aliceblue;
+  box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  font-size: 15px;
+  transition: all 0.5s ease;
+  pointer-events: none;
+}
+
+button:hover {
+  letter-spacing: 3px;
+  background-color: hsl(212, 80%, 48%);
+  color: hsl(0, 0%, 100%);
+  box-shadow: hsl(212, 80%, 48%) 0px 7px 29px 0px;
+}
+
+button:active {
+  letter-spacing: 3px;
+  background-color: hsl(212, 80%, 48%);
+  color: hsl(0, 0%, 100%);
+  box-shadow: hsl(212, 80%, 48%) 0px 0px 0px 0px;
+  transform: translateY(10px);
+  transition: 100ms;
+}
+
+button.clean:hover {
+  letter-spacing: 3px;
+  background-color: none;
+  color: hsl(0, 0%, 100%);
+  box-shadow: none;
+}
+
+button.tabs:hover {
+  letter-spacing: 3px;
+  background-color: hsl(212, 80%, 48%);
+  color: hsl(0, 0%, 100%);
+  box-shadow: hsl(212, 80%, 48%) 0px 3px 15px 0px;
+}
+
+button.tabs:active {
+  letter-spacing: 3px;
+  background-color: hsl(212, 80%, 48%);
+  color: hsl(0, 0%, 100%);
+  box-shadow: hsl(212, 80%, 48%) 0px 0px 0px 0px;
+  transform: translateY(10px);
+  transition: 100ms;
+}
+
+select {
+  appearance: none;
+  @supports (appearance: base-select) {
+    &,
+    &::picker(select) {
+      appearance: base-select;
+    }
+  }
+}
+
+select {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-width: 225px;
+  color: white;
+  padding-block: 8px;
+  padding-inline: 10px 30px;
+  border-radius: 50px;
+  cursor: pointer;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  background: rgb(45, 160, 226)
+    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='%23FFF' class='size-6'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='m19.5 8.25-7.5 7.5-7.5-7.5' /%3E%3C/svg%3E%0A")
+    right 10px center / 20px no-repeat;
+  @supports (appearance: base-select) {
+    padding-inline: 10px;
+    background-image: none;
+    &::picker-icon {
+      content: "";
+      width: 20px;
+      height: 20px;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='%23FFF' class='size-6'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='m19.5 8.25-7.5 7.5-7.5-7.5' /%3E%3C/svg%3E%0A");
+      transition: rotate 0.2s ease-out;
+    }
+    &:open::picker-icon {
+      rotate: 180deg;
+    }
+    &::picker(select) {
+      padding: 0;
+      margin-top: 5px;
+      border: 0px;
+      background: white;
+      border-radius: 5px;
+      font-weight: 400;
+      background-color: rgb(45, 160, 226);
+      color: white;
+      opacity: 0;
+      height: 0;
+      overflow: clip;
+      transition: height 0.5s ease-out, opacity 0.5s ease-out, overlay 0.5s,
+        display 0.5s;
+
+      transition-behavior: allow-discrete;
+    }
+    &:open::picker(select) {
+      opacity: 1;
+      height: calc-size(auto, size);
+      overflow: auto;
+      @starting-style {
+        opacity: 0;
+        height: 0;
+      }
+    }
+    option {
+      padding: 10px;
+      /* border-top: 1px solid plum; */
+      cursor: pointer;
+      transition-property: color, background;
+      transition-duration: 0.2s;
+      transition-timing-function: ease-out;
+      &:where(:hover, :focus, :active) {
+        background: hsl(212, 83%, 51%);
+        color: white;
+      }
+      &:checked {
+        background: hsl(212, 80%, 48%);
+        color: white;
+      }
+      &::checkmark {
+        display: none;
+      }
+      &:first-child {
+        border: 0;
+      }
+    }
+  }
 }
